Endrer til å se på dagen før STP